--- a/main.ipynb
+++ b/main.ipynb
@@ -3,12 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a8eb119b",
-   "metadata": {},
+   "source": [
+    "import numpy as np\r\n",
+    "from keras.datasets import mnist"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "INFO:tensorflow:Enabling eager execution\n",
       "INFO:tensorflow:Enabling v2 tensorshape\n",
@@ -18,75 +20,134 @@
      ]
     }
    ],
-   "source": [
-    "import numpy as np\n",
-    "from keras.datasets import mnist"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c8d3d8eb",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "30120f98",
-   "metadata": {},
+   "execution_count": 3,
+   "source": [
+    "x_train.shape"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
-   "source": [
-    "x_train.shape"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c2cddf15",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
-    "images = x_train[:1000].reshape(1000, 28*28)\n",
+    "images = x_train[:1000].reshape(1000, 28*28)\r\n",
     "labels = y_train[0:1000].reshape(1000,1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "labels[:10]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[5],\n",
+       "       [0],\n",
+       "       [4],\n",
+       "       [1],\n",
+       "       [9],\n",
+       "       [2],\n",
+       "       [1],\n",
+       "       [3],\n",
+       "       [1],\n",
+       "       [4]], dtype=uint8)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "ind = [(0,2),(1,3)]\r\n",
+    "arr = np.random.rand(4,5)\r\n",
+    "print(arr)\r\n",
+    "print(arr[[0,1,2], [2,3,2]])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0.0187774  0.40096562 0.54397182 0.12717579 0.76348997]\n",
+      " [0.72280741 0.46041439 0.71211558 0.08315773 0.36394686]\n",
+      " [0.53631626 0.29903702 0.3449732  0.83723477 0.64912785]\n",
+      " [0.81546561 0.28126664 0.56158202 0.19636561 0.65864796]]\n",
+      "[0.54397182 0.08315773 0.3449732 ]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "\r\n",
+    "arr = [1,2,3,4]\r\n",
+    "arr[::-1]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4e5a03",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5099b9b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.1 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -99,6 +160,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
+  },
+  "interpreter": {
+   "hash": "d87320467d95eebbbff257235e25593b7a85f99340967afb18d54479c0228d87"
   }
  },
  "nbformat": 4,
