--- a/main.ipynb
+++ b/main.ipynb
@@ -2,152 +2,200 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
+   "id": "9515c5b6",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import numpy as np\r\n",
+    "import numpy as np\n",
     "from keras.datasets import mnist"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "INFO:tensorflow:Enabling eager execution\n",
-      "INFO:tensorflow:Enabling v2 tensorshape\n",
-      "INFO:tensorflow:Enabling resource variables\n",
-      "INFO:tensorflow:Enabling tensor equality\n",
-      "INFO:tensorflow:Enabling control flow v2\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
+   "id": "5c157a9f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "x_train.shape"
-   ],
+   "execution_count": 35,
+   "id": "41eab7d0",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(60000, 28, 28)"
       ]
      },
+     "execution_count": 35,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "x_train.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "images = x_train[:1000].reshape(1000, 28*28)\r\n",
-    "labels = y_train[0:1000].reshape(1000,1)"
-   ],
+   "execution_count": 36,
+   "id": "b75bf4d8",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "images = x_train[:1000].reshape(1000, 28*28)\n",
+    "labels = y_train[0:1000].reshape(1000,1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
+   "id": "1efe4479",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "labels[:10]"
-   ],
+    "mean_x = np.mean(images)\n",
+    "std = np.sum(images**2)/(images.shape[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "143a39f6",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[5],\n",
-       "       [0],\n",
-       "       [4],\n",
-       "       [1],\n",
-       "       [9],\n",
-       "       [2],\n",
-       "       [1],\n",
-       "       [3],\n",
-       "       [1],\n",
-       "       [4]], dtype=uint8)"
+       "array([[-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983],\n",
+       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983],\n",
+       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983],\n",
+       "       ...,\n",
+       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983],\n",
+       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983],\n",
+       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
+       "        -0.00310983, -0.00310983]])"
       ]
      },
+     "execution_count": 38,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "images = (images - mean_x)/std\n",
+    "images"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
+   "id": "576f7129",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "ind = [(0,2),(1,3)]\r\n",
-    "arr = np.random.rand(4,5)\r\n",
-    "print(arr)\r\n",
-    "print(arr[[0,1,2], [2,3,2]])"
-   ],
+    "from neural_network import NeuralNetwork"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a7e1eeb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_of_features = images.shape[1]\n",
+    "count_classes = 10\n",
+    "batch_size = 200\n",
+    "learing_rate = 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "feb27978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn = NeuralNetwork()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1012cd84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.CreateLayerRelu((count_of_features, 1000))\n",
+    "nn.CreateLayerRelu((1000, 500))\n",
+    "nn.CreateLayerLinear((500, count_classes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b5b22642",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[0.0187774  0.40096562 0.54397182 0.12717579 0.76348997]\n",
-      " [0.72280741 0.46041439 0.71211558 0.08315773 0.36394686]\n",
-      " [0.53631626 0.29903702 0.3449732  0.83723477 0.64912785]\n",
-      " [0.81546561 0.28126664 0.56158202 0.19636561 0.65864796]]\n",
-      "[0.54397182 0.08315773 0.3449732 ]\n"
+      "22.634909618401572\n",
+      "13.813140518849655\n",
+      "7.9989119107853295\n",
+      "5.264154721438031\n",
+      "5.0216904766404085\n",
+      "3.655061454447534\n",
+      "3.2841105326954994\n",
+      "3.5816382804242863\n",
+      "3.147557574474125\n",
+      "1.8707036019439738\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "source": [
-    "\r\n",
-    "arr = [1,2,3,4]\r\n",
-    "arr[::-1]"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[4, 3, 2, 1]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
-   "metadata": {}
+    "epochs = 10\n",
+    "for it in range(epochs):\n",
+    "    batch_indexes = np.random.randint(0, images.shape[0], batch_size)\n",
+    "    batch_X = images[batch_indexes]\n",
+    "    batch_y = labels[batch_indexes]\n",
+    "    output = nn.forward(batch_X)\n",
+    "    prediction = nn.softmax(output)\n",
+    "    loss = nn.CrossEntropyLoss(prediction, batch_y)\n",
+    "    nn.backward(learing_rate)\n",
+    "    print(loss)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "6e88ed90",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d87320467d95eebbbff257235e25593b7a85f99340967afb18d54479c0228d87"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.1 64-bit"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -160,9 +208,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
-  },
-  "interpreter": {
-   "hash": "d87320467d95eebbbff257235e25593b7a85f99340967afb18d54479c0228d87"
   }
  },
  "nbformat": 4,
