Added an accuracy score on the test data while getting an accuracy of 0.868

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "id": "9515c5b6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "id": "5c157a9f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "id": "41eab7d0",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,63 +44,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "id": "b75bf4d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = x_train[:1000].reshape(1000, 28*28)\n",
-    "labels = y_train[0:1000].reshape(1000,1)"
+    "images = x_train[:10000].reshape(10000, 28*28)\n",
+    "labels = y_train[0:10000].reshape(10000,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "1efe4479",
+   "execution_count": 100,
+   "id": "52595397",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_x = np.mean(images)\n",
-    "std = np.sum(images**2)/(images.shape[0]-1)"
+    "def preparing_data(X):\n",
+    "    mean_x = np.mean(X)\n",
+    "    std = np.sum(X**2)/(X.shape[0]-1)\n",
+    "    return (X - mean_x)/std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "143a39f6",
+   "execution_count": 101,
+   "id": "4b61d3bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983],\n",
-       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983],\n",
-       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983],\n",
-       "       ...,\n",
-       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983],\n",
-       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983],\n",
-       "       [-0.00310983, -0.00310983, -0.00310983, ..., -0.00310983,\n",
-       "        -0.00310983, -0.00310983]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "images = (images - mean_x)/std\n",
-    "images"
+    "images = preparing_data(images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 102,
    "id": "576f7129",
    "metadata": {},
    "outputs": [],
@@ -110,34 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "a7e1eeb1",
+   "execution_count": 124,
+   "id": "39af708d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_of_features = images.shape[1]\n",
-    "count_classes = 10\n",
-    "batch_size = 200\n",
-    "learing_rate = 0.001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "feb27978",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nn = NeuralNetwork()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "1012cd84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "nn = NeuralNetwork()\n",
     "nn.CreateLayerRelu((count_of_features, 1000))\n",
     "nn.CreateLayerRelu((1000, 500))\n",
     "nn.CreateLayerLinear((500, count_classes))"
@@ -145,29 +101,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b5b22642",
+   "execution_count": 125,
+   "id": "c3efc754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_of_features = images.shape[1]\n",
+    "count_classes = 10\n",
+    "batch_size = 500\n",
+    "learing_rate = 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "764731c4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.634909618401572\n",
-      "13.813140518849655\n",
-      "7.9989119107853295\n",
-      "5.264154721438031\n",
-      "5.0216904766404085\n",
-      "3.655061454447534\n",
-      "3.2841105326954994\n",
-      "3.5816382804242863\n",
-      "3.147557574474125\n",
-      "1.8707036019439738\n"
+      "26.454469028663866\n",
+      "30.607563728779258\n",
+      "31.13485571096006\n",
+      "24.827169507786436\n",
+      "14.901575873015423\n",
+      "11.104204811400804\n",
+      "8.016312903343767\n",
+      "3.354593307931821\n",
+      "2.0441313334015523\n",
+      "2.1293571847257664\n",
+      "1.531552054306428\n",
+      "1.62721452233404\n",
+      "1.6860157890155707\n",
+      "1.6729662841274202\n",
+      "1.4622662479183186\n",
+      "1.3807922155386871\n",
+      "1.008190679505792\n",
+      "1.1531214120851325\n",
+      "1.1262818193836341\n",
+      "1.4466582235507777\n",
+      "1.1303342226232467\n",
+      "0.9649590181542803\n",
+      "0.8323603399347261\n",
+      "0.8960107510176443\n",
+      "0.8374650593117661\n",
+      "0.9061161355125241\n",
+      "0.7186283713012348\n",
+      "1.1731831779505824\n",
+      "0.9061936537765394\n",
+      "1.0110537113284952\n",
+      "0.8575552570169694\n",
+      "0.8441954509456265\n",
+      "0.754447088045348\n",
+      "0.6167214224952372\n",
+      "0.8445818774976304\n",
+      "0.7351480795795365\n",
+      "0.8428386092754786\n",
+      "0.781596492940466\n",
+      "0.6619806815638046\n",
+      "0.6142752123770034\n",
+      "0.8108723996076777\n",
+      "0.792613634676253\n",
+      "0.850594077951545\n",
+      "0.4988493531556901\n",
+      "0.6223488927008569\n",
+      "0.6764363047222964\n",
+      "0.7534674169104328\n",
+      "0.7435727579903633\n",
+      "0.6987310576900213\n",
+      "0.6572000497582282\n",
+      "0.9694782988077822\n",
+      "0.7748910844238805\n",
+      "0.8743430863387671\n",
+      "0.5713360422298258\n",
+      "0.6267058838631531\n",
+      "0.719188123979126\n",
+      "0.6738329048700844\n",
+      "0.47964579416584247\n",
+      "0.6857820818303437\n",
+      "0.45741670907980553\n",
+      "0.5973502856376822\n",
+      "0.6167892800887949\n",
+      "0.5929837470356488\n",
+      "0.5153958629005702\n",
+      "0.4905161644440984\n",
+      "0.3883378647398453\n",
+      "0.45867819346884336\n",
+      "0.4791459836655595\n",
+      "0.5164748197530119\n",
+      "0.37929724010634014\n",
+      "0.4179484994822\n",
+      "0.483610734486312\n",
+      "0.7042429147041189\n",
+      "0.5374387314585254\n",
+      "0.6410695784050966\n",
+      "0.5272166433077784\n",
+      "0.444373843418162\n",
+      "0.5165737851187584\n",
+      "0.44076553647832095\n",
+      "0.5280388287309274\n",
+      "0.525718123461819\n",
+      "0.38387093410295325\n",
+      "0.568877278887372\n",
+      "0.41830180385129523\n",
+      "0.39094942495631146\n",
+      "0.43796218700169814\n",
+      "0.3391325032998574\n",
+      "0.40640947349683276\n",
+      "0.39387895934653494\n",
+      "0.31315453823169126\n",
+      "0.39614668655916113\n",
+      "0.5014455173845501\n",
+      "0.39272950188952904\n",
+      "0.42025722653394904\n",
+      "0.2529559539489667\n",
+      "0.521823132144492\n",
+      "0.2545389052253705\n",
+      "0.35037768560825894\n",
+      "0.391283240188042\n",
+      "0.48607561227557516\n",
+      "0.28085315228199315\n",
+      "0.46825623214396006\n",
+      "0.28685368635951614\n",
+      "0.30954847698134175\n",
+      "0.2402446362505484\n",
+      "0.3719971300650422\n",
+      "0.3990273037779376\n",
+      "0.27339640636672424\n",
+      "0.23975738101255117\n",
+      "0.2747303636368363\n",
+      "0.4110026712082943\n",
+      "0.380027996553842\n",
+      "0.44048929435059186\n",
+      "0.27154167608406715\n",
+      "0.20513386579971132\n",
+      "0.3080406602635127\n",
+      "0.40078836134840423\n",
+      "0.299828260047027\n",
+      "0.24278975499103625\n",
+      "0.2827898250269114\n",
+      "0.3065652419200796\n",
+      "0.3506455469082016\n",
+      "0.2974313985781797\n",
+      "0.19900721597906523\n",
+      "0.28676019093687344\n",
+      "0.4087449206853045\n",
+      "0.29628386833674736\n",
+      "0.2696268394705456\n",
+      "0.16618178127455963\n",
+      "0.3199241326667495\n",
+      "0.30555079419132336\n",
+      "0.217936192409862\n",
+      "0.3204476756573019\n",
+      "0.20082517087326773\n",
+      "0.3301251485470987\n",
+      "0.1763332677798829\n",
+      "0.27338835467584466\n",
+      "0.2961048092127529\n",
+      "0.2940137282801372\n",
+      "0.2819346330937467\n",
+      "0.20527660744155993\n",
+      "0.19477032467075567\n",
+      "0.3118443075022546\n",
+      "0.3680855297694013\n",
+      "0.21916078602676053\n",
+      "0.23336633350493344\n",
+      "0.235145711464677\n",
+      "0.2955587917393965\n",
+      "0.14169146557655965\n",
+      "0.2851696607295294\n",
+      "0.1891988490170682\n",
+      "0.2025308500466494\n",
+      "0.1345406516575098\n",
+      "0.1749522887385185\n",
+      "0.19858594249680755\n",
+      "0.22171151608272716\n",
+      "0.11655389107475704\n",
+      "0.16977169519290297\n",
+      "0.30096926105281624\n",
+      "0.3650327375411333\n",
+      "0.23489581931092218\n",
+      "0.10748122880280764\n",
+      "0.1741243847232199\n",
+      "0.22739933661379017\n",
+      "0.14034115792116547\n",
+      "0.17005345073558056\n",
+      "0.2107470851727639\n",
+      "0.2874462857983174\n",
+      "0.1940142083573937\n",
+      "0.21879706349194636\n",
+      "0.233740112219295\n",
+      "0.2732364115387643\n",
+      "0.11021779511084637\n",
+      "0.19775442306788868\n",
+      "0.17314879693255006\n",
+      "0.22855405855736724\n",
+      "0.22631006512378055\n",
+      "0.19431861789859084\n",
+      "0.2302985860522307\n",
+      "0.1773033978228163\n",
+      "0.1560595754189069\n",
+      "0.1731184855275958\n",
+      "0.18075032015796405\n",
+      "0.17755597110947674\n",
+      "0.18467322645071244\n",
+      "0.0969244744692508\n",
+      "0.1017635515800077\n",
+      "0.20905985327764076\n",
+      "0.21251801471610723\n",
+      "0.1702656143375455\n",
+      "0.16325766783091558\n",
+      "0.20884274694439658\n",
+      "0.12906458913265842\n",
+      "0.1226287496966157\n",
+      "0.11359657837277962\n",
+      "0.10499816131129533\n",
+      "0.19746711744156403\n",
+      "0.09076919859188544\n",
+      "0.24163971550465807\n",
+      "0.18431478865328757\n",
+      "0.1273427788633888\n",
+      "0.21832572403587916\n",
+      "0.08874608125234135\n",
+      "0.15526759794604747\n",
+      "0.16721287228904372\n",
+      "0.24339162567417863\n",
+      "0.10683098322836365\n",
+      "0.1749807633485097\n",
+      "0.17084653368004327\n",
+      "0.21312472650161235\n",
+      "0.10141229034129863\n",
+      "0.1890410122053808\n",
+      "0.1347404290559692\n",
+      "0.22090340283289622\n",
+      "0.07605917621158834\n",
+      "0.19055246733128683\n",
+      "0.10159659786668354\n",
+      "0.14257437740388873\n",
+      "0.2102962419576959\n",
+      "0.20104537018161805\n",
+      "0.11400221411867063\n",
+      "0.14473910679483307\n",
+      "0.12009581619886864\n",
+      "0.11279823729978991\n",
+      "0.09011513058517973\n",
+      "0.11234443888315107\n",
+      "0.11824219606165812\n",
+      "0.16925646255620141\n",
+      "0.1773350349099918\n",
+      "0.11520978761738836\n",
+      "0.14272709698117572\n",
+      "0.11840817971163818\n",
+      "0.16700622090956407\n",
+      "0.1456451424017727\n",
+      "0.08225116422053984\n",
+      "0.0945221600621554\n",
+      "0.1324266947505425\n",
+      "0.07999078070894744\n",
+      "0.13372886472934736\n",
+      "0.09379368428568409\n",
+      "0.06225875781205041\n",
+      "0.12511692045725298\n",
+      "0.15894723584022527\n",
+      "0.07367046986376158\n",
+      "0.10478745671494462\n",
+      "0.1024898869027964\n",
+      "0.06101403200947161\n",
+      "0.17993181680125733\n",
+      "0.10900956536578224\n",
+      "0.21468544846406284\n",
+      "0.14041865035731402\n",
+      "0.07634206327223679\n",
+      "0.14131051514719106\n",
+      "0.06454307168132074\n",
+      "0.10182838350233996\n",
+      "0.11270357420143226\n",
+      "0.07124845015502025\n",
+      "0.11807176127529245\n",
+      "0.04581408683995129\n",
+      "0.05962563851227336\n",
+      "0.17568343342487355\n",
+      "0.128075115501614\n",
+      "0.09610151424694817\n",
+      "0.07152235774589576\n",
+      "0.07100555235109102\n",
+      "0.10084655575041393\n",
+      "0.048818593299394294\n",
+      "0.11760204092824886\n",
+      "0.14309189146343276\n",
+      "0.11227599139133815\n",
+      "0.10225337475957236\n",
+      "0.06679432352486403\n",
+      "0.08255980217583007\n",
+      "0.06561247326160886\n",
+      "0.16060336172059947\n",
+      "0.08425248712724477\n",
+      "0.14702526541089356\n",
+      "0.08527544313082955\n",
+      "0.06354913662464284\n",
+      "0.10495743438361088\n",
+      "0.09999285408358202\n",
+      "0.11027212345875932\n",
+      "0.07167943802667809\n",
+      "0.07554680540412279\n",
+      "0.06763691103753801\n",
+      "0.04232901575923501\n",
+      "0.08398930909315988\n",
+      "0.061739594470112576\n",
+      "0.07589814731030448\n",
+      "0.07852885805223579\n",
+      "0.11450659382353368\n",
+      "0.053177265917067985\n",
+      "0.030811426654426075\n",
+      "0.06588992375269072\n",
+      "0.11912217750713695\n",
+      "0.06446082222035338\n",
+      "0.17390565083413723\n",
+      "0.05814004162005339\n",
+      "0.07029060646203163\n",
+      "0.11913358544021393\n"
      ]
     }
    ],
    "source": [
-    "epochs = 10\n",
+    "epochs = 300\n",
+    "loss = 0\n",
     "for it in range(epochs):\n",
     "    batch_indexes = np.random.randint(0, images.shape[0], batch_size)\n",
     "    batch_X = images[batch_indexes]\n",
@@ -181,10 +441,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e88ed90",
+   "execution_count": 127,
+   "id": "f96c8fe9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "x_test = x_test[:1000].reshape(-1, 28*28)\n",
+    "x_test = preparing_data(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "85621a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = y_test[:1000].reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "33d6eef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = nn.forward(x_test)\n",
+    "prediction = nn.softmax(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "2bea0b95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = np.argmax(prediction, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "f3c46a18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = prediction.reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "0bc6bd98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_of_rigth = np.sum(prediction == y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "230434a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.868"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = count_of_rigth / y_test.shape[0]\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45bc1e29",
+   "metadata": {},
    "source": []
   }
  ],
